fix: #398 images out of container in description (now fully working)

--- a/src/app/templates/recordings/recordings-single/recordings-single.component.scss
+++ b/src/app/templates/recordings/recordings-single/recordings-single.component.scss
@@ -45,8 +45,10 @@
   margin-bottom: 2rem;
 }
 
-.recording__description__container p img {
-  max-width: 100%;
+::ng-deep {
+  .recording__description__container p img {
+    max-width: 100%;
+  }
 }
 
 .recording__artists {
